--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>设计主题站后台管理系统</title>
+    <title>设计主题站后台管24243424理系统</title>
 </head>
 <body>
 <div id="app">
